# TODO
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "emfuzzer"
# TODO description
dynamic = ["version"]  # TODO
requires-python = ">= 3.13"
dependencies = [
  "PyNaCl==1.5.0",
  "bcrypt==4.3.0",
  "cffi==1.17.1",
  "cryptography==43.0.1",
  "paramiko==3.5.1",
  "pycparser==2.22",
]
# TODO authors
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

# TODO [project.urls]

# TODO [project.scripts]

# TODO [project.entry-points.

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "flake8-pyproject==1.2.3",
  "flake8==7.1.1",
  "isort==5.13.2",
  "mypy==1.14.0",
  "mypy_extensions==1.0.0",
  "pycodestyle==2.12.1",
  "pyflakes==3.2.0",
  "pylint==3.3.6",
  "pytest==8.3.4",
  "types_paramiko==3.5.0.20240928",
]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [
  "__pycache__",
  ".venv",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"

[tool.pylint.main]
ignore = [
  "__pycache__",
  ".venv",
  ".git",
]
jobs = 0

[tool.pylint.format]
max-line-length = 100

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
disable = [
  "missing-function-docstring",
  "missing-module-docstring", # TODO
  "missing-class-docstring", # TODO ?
  "logging-fstring-interpolation",
]
enable = [
  "useless-suppression",
]

[tool.pylint.similarities]
# TODO
min-similarity-lines = 5

[tool.pylint.imports]
allow-reexport-from-package = true
